// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can disable emitting .gitignore 1`] = `
Array [
  "en.ts",
  "types.ts",
  "utils.ts",
  "browser.ts",
]
`;

exports[`can disable emitting browser helper 1`] = `
Array [
  "en.ts",
  "types.ts",
  "utils.ts",
  ".gitignore",
]
`;

exports[`can disable emitting utils 1`] = `
Array [
  "en.ts",
  "types.ts",
  ".gitignore",
]
`;

exports[`core generates correct files with errOnUnusedParam: large 1`] = `
Array [
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import { Language } from \\"./types\\"
const lang = {
  yes: (): string => \\"Yes\\",
  no: (): string => \\"No\\",
  thereAreXFeatures: (p: { count: number }): string => p.count === 1 ? (\\"There is \\" + p.count.toString() + \\" feature\\") : lang.thereAreXFeatures_plural(p),
  thereAreXFeatures_plural: (p: { count: string | number }): string => \\"There are \\" + p.count.toString() + \\" features\\",
  nested: {
    works: {
      correctly: (): string => \\"Nested works correctly\\",
      really: {
        well: (): string => \\"Nested works really well\\",
      },
    },
  },
  andYouCanMissKeys: (): string => \\"And you can miss keys in non-default languages\\",
  orHaveDifferentPlaceholders: (p: { firstName: string | number }): string => \\"Or have different placeholders, \\" + p.firstName.toString() + \\"\\",
  manyParameters: (p: { title: string | number, firstName: string | number, lastName: string | number }): string => \\"You can have many parameters, \\" + p.title.toString() + \\" \\" + p.firstName.toString() + \\" \\" + p.lastName.toString() + \\"!\\",
}
export default lang as Language
",
    "name": "en.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import { Language, DeepPartial } from \\"./types\\"
const lang = {
  yes: (): string => \\"Oui\\",
  no: (): string => \\"Non\\",
  thereAreXFeatures: (p: { count: number }): string => p.count === 1 ? (\\"Il y a \\" + p.count.toString() + \\" fonctionnalité\\") : lang.thereAreXFeatures_plural(p),
  thereAreXFeatures_plural: (p: { count: string | number }): string => \\"Il y a \\" + p.count.toString() + \\" fonctionnalités\\",
  nested: {
    works: {
      correctly: (): string => \\"Imbriqué fonctionne correctement\\",
      really: {
        well: (): string => \\"Imbriqué fonctionne très bien\\",
      },
    },
  },
  orHaveDifferentPlaceholders: (p: { username: string | number }): string => \\"Ou avoir des espaces réservés différents, \\" + p.username.toString() + \\"\\",
}
export default lang as DeepPartial<Language>
",
    "name": "fr.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
export type DeepPartial<T> = { [P in keyof T]?: T[P] extends object ? DeepPartial<T[P]> : T[P]; }
export interface Language {
  yes: () => string,
  no: () => string,
  thereAreXFeatures: (p: { count: number }) => string,
  nested: {
    works: {
      correctly: () => string,
      really: {
        well: () => string,
      },
    },
  },
  andYouCanMissKeys: () => string,
  orHaveDifferentPlaceholders: (p: { firstName: string | number, username: string | number }) => string,
  manyParameters: (p: { title: string | number, firstName: string | number, lastName: string | number }) => string,
}
",
    "name": "types.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import en from './en'
import fr from './fr'
import { Language, DeepPartial } from './types'

/**
 * Merges two languages together, preferring the preferred language where possible
 * @param preferredLang The preferred language. NB: may be modified
 * @param defaultLang The default language. NB: may be modified
 */
export const merge = (preferredLang: DeepPartial<Language>, defaultLang: Language): Language => {
  for (const key in defaultLang) {
    if (key in preferredLang) {
      if (typeof (preferredLang as any)[key] === 'object') {
        (preferredLang as any)[key] = merge((preferredLang as any)[key], (defaultLang as any)[key])
      }
    } else {
      (preferredLang as any)[key] = (defaultLang as any)[key]
    }
  }
  return preferredLang as Language
}

export const languages = { en, fr }

export const defaultLanguage = en

export const defaultLanguageCode = \\"en\\"",
    "name": "utils.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import { merge, languages, defaultLanguage } from './utils'
import { Language } from './types'

// Preferred languages, as specified by the user's browser
const preferredLanguages =
  ((navigator.languages ? navigator.languages : [navigator.language]) ?? [])
    .flatMap(lang => lang.length > 2 ? [lang, lang.slice(0, 2)] : lang)
    .filter((l, i, arr) => arr.indexOf(l) === i)
    .slice(0, 25)

let language: Language = defaultLanguage // fallback language
for (let i = preferredLanguages.length; i > 0; i--) {
  const key = preferredLanguages[i] as keyof typeof languages
  if (key in languages) {
    language = merge(languages[key], language)
  }
}

export default language
",
    "name": "browser.ts",
  },
  Object {
    "content": "en.ts
fr.ts
types.ts
utils.ts
browser.ts
.gitignore",
    "name": ".gitignore",
  },
]
`;

exports[`core generates correct files with errOnUnusedParam: simple 1`] = `
Array [
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import { Language } from \\"./types\\"
const lang = {
  thereAreXFeatures: (p: { count: number }): string => p.count === 1 ? (\\"There is \\" + p.count.toString() + \\" feature\\") : lang.thereAreXFeatures_plural(p),
  thereAreXFeatures_plural: (p: { count: string | number }): string => \\"There are \\" + p.count.toString() + \\" features\\",
  nested: {
    works: (): string => \\"Nested works\\",
  },
  andYouCanMissKeys: (): string => \\"And you can miss keys in non-default languages\\",
  orHaveDifferentPlaceholders: (p: { firstName: string | number }): string => \\"Or have different placeholders, \\" + p.firstName.toString() + \\"\\",
}
export default lang as Language
",
    "name": "en.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import { Language, DeepPartial } from \\"./types\\"
const lang = {
  thereAreXFeatures: (p: { count: number }): string => p.count === 1 ? (\\"Il y a \\" + p.count.toString() + \\" fonctionnalité\\") : lang.thereAreXFeatures_plural(p),
  thereAreXFeatures_plural: (p: { count: string | number }): string => \\"Il y a \\" + p.count.toString() + \\" fonctionnalités\\",
  nested: {
    works: (): string => \\"Imbriqué fonctionne\\",
  },
  orHaveDifferentPlaceholders: (p: { username: string | number }): string => \\"Ou avoir des espaces réservés différents, \\" + p.username.toString() + \\"\\",
}
export default lang as DeepPartial<Language>
",
    "name": "fr.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
export type DeepPartial<T> = { [P in keyof T]?: T[P] extends object ? DeepPartial<T[P]> : T[P]; }
export interface Language {
  thereAreXFeatures: (p: { count: number }) => string,
  nested: {
    works: () => string,
  },
  andYouCanMissKeys: () => string,
  orHaveDifferentPlaceholders: (p: { firstName: string | number, username: string | number }) => string,
}
",
    "name": "types.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import en from './en'
import fr from './fr'
import { Language, DeepPartial } from './types'

/**
 * Merges two languages together, preferring the preferred language where possible
 * @param preferredLang The preferred language. NB: may be modified
 * @param defaultLang The default language. NB: may be modified
 */
export const merge = (preferredLang: DeepPartial<Language>, defaultLang: Language): Language => {
  for (const key in defaultLang) {
    if (key in preferredLang) {
      if (typeof (preferredLang as any)[key] === 'object') {
        (preferredLang as any)[key] = merge((preferredLang as any)[key], (defaultLang as any)[key])
      }
    } else {
      (preferredLang as any)[key] = (defaultLang as any)[key]
    }
  }
  return preferredLang as Language
}

export const languages = { en, fr }

export const defaultLanguage = en

export const defaultLanguageCode = \\"en\\"",
    "name": "utils.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import { merge, languages, defaultLanguage } from './utils'
import { Language } from './types'

// Preferred languages, as specified by the user's browser
const preferredLanguages =
  ((navigator.languages ? navigator.languages : [navigator.language]) ?? [])
    .flatMap(lang => lang.length > 2 ? [lang, lang.slice(0, 2)] : lang)
    .filter((l, i, arr) => arr.indexOf(l) === i)
    .slice(0, 25)

let language: Language = defaultLanguage // fallback language
for (let i = preferredLanguages.length; i > 0; i--) {
  const key = preferredLanguages[i] as keyof typeof languages
  if (key in languages) {
    language = merge(languages[key], language)
  }
}

export default language
",
    "name": "browser.ts",
  },
  Object {
    "content": "en.ts
fr.ts
types.ts
utils.ts
browser.ts
.gitignore",
    "name": ".gitignore",
  },
]
`;

exports[`core generates correct files with one locale 1`] = `
Array [
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import { Language } from \\"./types\\"
const lang = {
  thereAreXFeatures: (p: { count: number }): string => p.count === 1 ? (\\"There is \\" + p.count.toString() + \\" feature\\") : lang.thereAreXFeatures_plural(p),
  thereAreXFeatures_plural: (p: { count: string | number }): string => \\"There are \\" + p.count.toString() + \\" features\\",
  nested: {
    works: (): string => \\"Nested works\\",
  },
  andYouCanMissKeys: (): string => \\"And you can miss keys in non-default languages\\",
  orHaveDifferentPlaceholders: (p: { firstName: string | number }): string => \\"Or have different placeholders, \\" + p.firstName.toString() + \\"\\",
}
export default lang as Language
",
    "name": "en.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
export type DeepPartial<T> = { [P in keyof T]?: T[P] extends object ? DeepPartial<T[P]> : T[P]; }
export interface Language {
  thereAreXFeatures: (p: { count: number, [key: string]: string }) => string,
  nested: {
    works: (p?: { [key: string]: string }) => string,
  },
  andYouCanMissKeys: (p?: { [key: string]: string }) => string,
  orHaveDifferentPlaceholders: (p: { firstName: string | number, [key: string]: string }) => string,
}
",
    "name": "types.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import en from './en'
import { Language, DeepPartial } from './types'

/**
 * Merges two languages together, preferring the preferred language where possible
 * @param preferredLang The preferred language. NB: may be modified
 * @param defaultLang The default language. NB: may be modified
 */
export const merge = (preferredLang: DeepPartial<Language>, defaultLang: Language): Language => {
  for (const key in defaultLang) {
    if (key in preferredLang) {
      if (typeof (preferredLang as any)[key] === 'object') {
        (preferredLang as any)[key] = merge((preferredLang as any)[key], (defaultLang as any)[key])
      }
    } else {
      (preferredLang as any)[key] = (defaultLang as any)[key]
    }
  }
  return preferredLang as Language
}

export const languages = { en }

export const defaultLanguage = en

export const defaultLanguageCode = \\"en\\"",
    "name": "utils.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import { merge, languages, defaultLanguage } from './utils'
import { Language } from './types'

// Preferred languages, as specified by the user's browser
const preferredLanguages =
  ((navigator.languages ? navigator.languages : [navigator.language]) ?? [])
    .flatMap(lang => lang.length > 2 ? [lang, lang.slice(0, 2)] : lang)
    .filter((l, i, arr) => arr.indexOf(l) === i)
    .slice(0, 25)

let language: Language = defaultLanguage // fallback language
for (let i = preferredLanguages.length; i > 0; i--) {
  const key = preferredLanguages[i] as keyof typeof languages
  if (key in languages) {
    language = merge(languages[key], language)
  }
}

export default language
",
    "name": "browser.ts",
  },
  Object {
    "content": "en.ts
types.ts
utils.ts
browser.ts
.gitignore",
    "name": ".gitignore",
  },
]
`;

exports[`core generates correct files: large 1`] = `
Array [
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import { Language } from \\"./types\\"
const lang = {
  yes: (): string => \\"Yes\\",
  no: (): string => \\"No\\",
  thereAreXFeatures: (p: { count: number }): string => p.count === 1 ? (\\"There is \\" + p.count.toString() + \\" feature\\") : lang.thereAreXFeatures_plural(p),
  thereAreXFeatures_plural: (p: { count: string | number }): string => \\"There are \\" + p.count.toString() + \\" features\\",
  nested: {
    works: {
      correctly: (): string => \\"Nested works correctly\\",
      really: {
        well: (): string => \\"Nested works really well\\",
      },
    },
  },
  andYouCanMissKeys: (): string => \\"And you can miss keys in non-default languages\\",
  orHaveDifferentPlaceholders: (p: { firstName: string | number }): string => \\"Or have different placeholders, \\" + p.firstName.toString() + \\"\\",
  manyParameters: (p: { title: string | number, firstName: string | number, lastName: string | number }): string => \\"You can have many parameters, \\" + p.title.toString() + \\" \\" + p.firstName.toString() + \\" \\" + p.lastName.toString() + \\"!\\",
}
export default lang as Language
",
    "name": "en.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import { Language, DeepPartial } from \\"./types\\"
const lang = {
  yes: (): string => \\"Oui\\",
  no: (): string => \\"Non\\",
  thereAreXFeatures: (p: { count: number }): string => p.count === 1 ? (\\"Il y a \\" + p.count.toString() + \\" fonctionnalité\\") : lang.thereAreXFeatures_plural(p),
  thereAreXFeatures_plural: (p: { count: string | number }): string => \\"Il y a \\" + p.count.toString() + \\" fonctionnalités\\",
  nested: {
    works: {
      correctly: (): string => \\"Imbriqué fonctionne correctement\\",
      really: {
        well: (): string => \\"Imbriqué fonctionne très bien\\",
      },
    },
  },
  orHaveDifferentPlaceholders: (p: { username: string | number }): string => \\"Ou avoir des espaces réservés différents, \\" + p.username.toString() + \\"\\",
}
export default lang as DeepPartial<Language>
",
    "name": "fr.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
export type DeepPartial<T> = { [P in keyof T]?: T[P] extends object ? DeepPartial<T[P]> : T[P]; }
export interface Language {
  yes: (p?: { [key: string]: string }) => string,
  no: (p?: { [key: string]: string }) => string,
  thereAreXFeatures: (p: { count: number, [key: string]: string }) => string,
  nested: {
    works: {
      correctly: (p?: { [key: string]: string }) => string,
      really: {
        well: (p?: { [key: string]: string }) => string,
      },
    },
  },
  andYouCanMissKeys: (p?: { [key: string]: string }) => string,
  orHaveDifferentPlaceholders: (p: { firstName: string | number, username: string | number, [key: string]: string }) => string,
  manyParameters: (p: { title: string | number, firstName: string | number, lastName: string | number, [key: string]: string }) => string,
}
",
    "name": "types.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import en from './en'
import fr from './fr'
import { Language, DeepPartial } from './types'

/**
 * Merges two languages together, preferring the preferred language where possible
 * @param preferredLang The preferred language. NB: may be modified
 * @param defaultLang The default language. NB: may be modified
 */
export const merge = (preferredLang: DeepPartial<Language>, defaultLang: Language): Language => {
  for (const key in defaultLang) {
    if (key in preferredLang) {
      if (typeof (preferredLang as any)[key] === 'object') {
        (preferredLang as any)[key] = merge((preferredLang as any)[key], (defaultLang as any)[key])
      }
    } else {
      (preferredLang as any)[key] = (defaultLang as any)[key]
    }
  }
  return preferredLang as Language
}

export const languages = { en, fr }

export const defaultLanguage = en

export const defaultLanguageCode = \\"en\\"",
    "name": "utils.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import { merge, languages, defaultLanguage } from './utils'
import { Language } from './types'

// Preferred languages, as specified by the user's browser
const preferredLanguages =
  ((navigator.languages ? navigator.languages : [navigator.language]) ?? [])
    .flatMap(lang => lang.length > 2 ? [lang, lang.slice(0, 2)] : lang)
    .filter((l, i, arr) => arr.indexOf(l) === i)
    .slice(0, 25)

let language: Language = defaultLanguage // fallback language
for (let i = preferredLanguages.length; i > 0; i--) {
  const key = preferredLanguages[i] as keyof typeof languages
  if (key in languages) {
    language = merge(languages[key], language)
  }
}

export default language
",
    "name": "browser.ts",
  },
  Object {
    "content": "en.ts
fr.ts
types.ts
utils.ts
browser.ts
.gitignore",
    "name": ".gitignore",
  },
]
`;

exports[`core generates correct files: simple 1`] = `
Array [
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import { Language } from \\"./types\\"
const lang = {
  thereAreXFeatures: (p: { count: number }): string => p.count === 1 ? (\\"There is \\" + p.count.toString() + \\" feature\\") : lang.thereAreXFeatures_plural(p),
  thereAreXFeatures_plural: (p: { count: string | number }): string => \\"There are \\" + p.count.toString() + \\" features\\",
  nested: {
    works: (): string => \\"Nested works\\",
  },
  andYouCanMissKeys: (): string => \\"And you can miss keys in non-default languages\\",
  orHaveDifferentPlaceholders: (p: { firstName: string | number }): string => \\"Or have different placeholders, \\" + p.firstName.toString() + \\"\\",
}
export default lang as Language
",
    "name": "en.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import { Language, DeepPartial } from \\"./types\\"
const lang = {
  thereAreXFeatures: (p: { count: number }): string => p.count === 1 ? (\\"Il y a \\" + p.count.toString() + \\" fonctionnalité\\") : lang.thereAreXFeatures_plural(p),
  thereAreXFeatures_plural: (p: { count: string | number }): string => \\"Il y a \\" + p.count.toString() + \\" fonctionnalités\\",
  nested: {
    works: (): string => \\"Imbriqué fonctionne\\",
  },
  orHaveDifferentPlaceholders: (p: { username: string | number }): string => \\"Ou avoir des espaces réservés différents, \\" + p.username.toString() + \\"\\",
}
export default lang as DeepPartial<Language>
",
    "name": "fr.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
export type DeepPartial<T> = { [P in keyof T]?: T[P] extends object ? DeepPartial<T[P]> : T[P]; }
export interface Language {
  thereAreXFeatures: (p: { count: number, [key: string]: string }) => string,
  nested: {
    works: (p?: { [key: string]: string }) => string,
  },
  andYouCanMissKeys: (p?: { [key: string]: string }) => string,
  orHaveDifferentPlaceholders: (p: { firstName: string | number, username: string | number, [key: string]: string }) => string,
}
",
    "name": "types.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import en from './en'
import fr from './fr'
import { Language, DeepPartial } from './types'

/**
 * Merges two languages together, preferring the preferred language where possible
 * @param preferredLang The preferred language. NB: may be modified
 * @param defaultLang The default language. NB: may be modified
 */
export const merge = (preferredLang: DeepPartial<Language>, defaultLang: Language): Language => {
  for (const key in defaultLang) {
    if (key in preferredLang) {
      if (typeof (preferredLang as any)[key] === 'object') {
        (preferredLang as any)[key] = merge((preferredLang as any)[key], (defaultLang as any)[key])
      }
    } else {
      (preferredLang as any)[key] = (defaultLang as any)[key]
    }
  }
  return preferredLang as Language
}

export const languages = { en, fr }

export const defaultLanguage = en

export const defaultLanguageCode = \\"en\\"",
    "name": "utils.ts",
  },
  Object {
    "content": "// Do not edit directly, this is generated by ts-i18n
/* eslint-disable */
import { merge, languages, defaultLanguage } from './utils'
import { Language } from './types'

// Preferred languages, as specified by the user's browser
const preferredLanguages =
  ((navigator.languages ? navigator.languages : [navigator.language]) ?? [])
    .flatMap(lang => lang.length > 2 ? [lang, lang.slice(0, 2)] : lang)
    .filter((l, i, arr) => arr.indexOf(l) === i)
    .slice(0, 25)

let language: Language = defaultLanguage // fallback language
for (let i = preferredLanguages.length; i > 0; i--) {
  const key = preferredLanguages[i] as keyof typeof languages
  if (key in languages) {
    language = merge(languages[key], language)
  }
}

export default language
",
    "name": "browser.ts",
  },
  Object {
    "content": "en.ts
fr.ts
types.ts
utils.ts
browser.ts
.gitignore",
    "name": ".gitignore",
  },
]
`;
